# noshuff-api

./: Pipfile  README.md  manage.py  pyproject.toml
accounts/: models.py
accounts/migrations/: 0001_initial.py
accounts/tests/: test_models.py  test_views.py
core/: models.py  serializers.py  spotipy_utils.py  urls.py  views.py
core/authentication/: spotify_auth_utils.py  views.py
core/migrations/: 0001_initial.py  0002_remove_user_avatar_url_and_more.py  0002_user_spotify_access_token_user_spotify_avatar_url_and_more.py  0003_alter_user_options_alter_user_managers_and_more.py  0004_user_uuid.py  0005_user_personal_blurb.py
core/tests/: test_auth.py  test_spotify_playlist_detail.py  test_spotify_playlists.py  test_users.py
core/tests/factories/: user_factory.py
core/tests/test_spotipy_utils/: test_get_spotify_playlist.py
noshuff/: asgi.py  settings.py  urls.py  wsgi.py
noshuff_api/: asgi.py  settings.py  urls.py  wsgi.py
