[tool.poetry]
name = "noshuff-api"
version = "0.1.0"
description = "NoShuffle API"
authors = ["NoShuffle <noshuffapp@gmail.com>"]
readme = "README.md"
packages = [{include = "noshuff_api"}]

[tool.black]
exclude = '''
    core/apps.py
    | manage.py
    | noshuff/settings.py
    | noshuff/asgi.py
    | noshuff/wsgi.py
    | migrations
'''

[tool.isort]
skip_gitignore = true
balanced_wrapping = true
extend_skip_glob = [
  "*/migrations/*",
]

[tool.poetry.dependencies]
python = "^3.9"
Django = "==4.1.1"
django-environ = "==0.9.0"
psycopg2-binary = "==2.9.3"
django-extensions = "==3.2.1"
spotipy = "==2.20.0"
PyJWT = "==2.6.0"


[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
