[tool.poetry]
name = "noshuff-api"
version = "0.1.0"
description = "NoShuffle"
authors = ["NoShuff <noshuffapp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "5.1.1"
django-environ = "0.11.2"
psycopg2 = "2.9.9"
spotipy = "2.24.0"
django-extensions = "3.2.3"
djangorestframework = "3.15.2"
djangorestframework-simplejwt = "5.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
